--- a/home/home.css
+++ b/home/home.css
@@ -3,7 +3,8 @@
 }
 
 body {
-	padding: 5% 7% 0% 7%;
+	margin: 0; padding: 0;
+	padding: 5% 18% 0% 9%;
 }
 
 #menu {
@@ -65,7 +66,7 @@ body {
 	background-color: #E6F3FF;
 	border-style: none;
 	border-radius: 5vw;
-	height: 5.4%;
+	height: 5%;
 	width: 11%;
 	margin-left: 1%;
 }
@@ -83,12 +84,12 @@ body {
 	color: #758BC4;
 	font-weight: bold;
 	padding: 1.5%;
-	font-size: 5vw;
+	font-size: 4.3vw;
 	border-style: solid;
 	border-color: black;
 	border-width: 0.1vw;
-	border-radius: 3vw;
-	margin: 5% 1.5% 0% 1.5%;
+	border-radius: 2vw;
+	margin: 5% 1% 0% 1%;
 	width: 27%;
 }
 
